--- a/my-contribution/my-contribution.csproj
+++ b/my-contribution/my-contribution.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="LaYumba.Functional" Version="2.0.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+      <PackageReference Include="NUnit" Version="3.13.3" />
       <PackageReference Include="RestSharp" Version="108.0.2-alpha.0.1" />
     </ItemGroup>
 
