--- a/my-contribution/my-contribution.csproj
+++ b/my-contribution/my-contribution.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="System.Collections.Immutable" Version="7.0.0-preview.5.22301.12" />
       <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
       <PackageReference Include="System.Interactive.Async" Version="6.0.1" />
+      <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
